--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "preset": "@guoyunhe/react-lib-scripts"
   },
   "devDependencies": {
+    "@alifd/next": "^1.26.25",
     "@guoyunhe/react-lib-scripts": "^1.0.0",
     "@testing-library/dom": "^9.0.0",
     "@testing-library/react": "^14.0.0",
@@ -66,7 +67,8 @@
     "typescript": "^5.1.3"
   },
   "peerDependencies": {
-    "react": "^16.8.0 || ^17.0.0 || ^18.0.0",
-    "antd": "^5.10.0"
+    "@alifd/next": "^1.0.0",
+    "antd": "^5.0.0",
+    "react": "^16.8.0 || ^17.0.0 || ^18.0.0"
   }
 }
