--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,8 @@
-# Build output
+.rive
 build
-dist
-
-# Coverage directory
 coverage
-
-# Dependency directories
-node_modules/
-
-# Lock files
+dist
+node_modules
 package-lock.json
 pnpm-lock.yaml
 yarn.lock
-
-# Output of 'npm pack'
-*.tgz
