--- a/package.json
+++ b/package.json
@@ -23,8 +23,9 @@
     "name": "Guo Yunhe",
     "email": "i@guoyunhe.me"
   },
-  "main": "dist/index.js",
-  "module": "dist/index.mjs",
+  "main": "dist/cjs/index.js",
+  "module": "dist/index.js",
+  "types": "dist/index.d.ts",
   "typings": "dist/index.d.ts",
   "files": [
     "dist",
@@ -33,42 +34,58 @@
     "README.md"
   ],
   "scripts": {
-    "build": "react-lib-scripts build",
+    "build": "rive build",
+    "build:watch": "rive build --watch",
     "deploy": "gh-pages -d build",
     "format": "react-lib-scripts format",
-    "lint": "react-lib-scripts lint",
-    "start": "react-lib-scripts start",
-    "test": "react-lib-scripts test",
+    "lint": "rive lint",
+    "lint:fix": "rive lint --fix",
+    "start": "rive start",
+    "test": "rive test",
+    "test:ui": "rive test --ui",
+    "test:watch": "rive test --watch",
     "watch": "react-lib-scripts watch"
   },
+  "prettier": "prettier-config-rive",
   "eslintConfig": {
-    "extends": "@guoyunhe/react-lib-scripts"
+    "extends": "eslint-config-rive/react"
   },
-  "jest": {
-    "preset": "@guoyunhe/react-lib-scripts"
+  "stylelint": {
+    "extends": "stylelint-config-rive"
+  },
+  "dependencies": {
+    "classnames": "^2.5.1"
   },
   "devDependencies": {
-    "@alifd/next": "^1.26.25",
-    "@guoyunhe/react-lib-scripts": "^1.0.0",
-    "@testing-library/dom": "^9.0.0",
-    "@testing-library/react": "^14.0.0",
-    "@testing-library/user-event": "^14.0.0",
-    "@tsconfig/strictest": "^2.0.1",
-    "@tsconfig/vite-react": "^2.0.0",
-    "@types/jest": "^29.0.0",
-    "@types/node": "^20.3.1",
-    "@types/react": "^18.0.0",
-    "@types/react-dom": "^18.0.0",
-    "antd": "^5.10.0",
+    "@alifd/next": "^1.27.2",
+    "@mdx-js/react": "^3.0.1",
+    "@testing-library/dom": "^9.3.4",
+    "@testing-library/react": "^14.2.1",
+    "@testing-library/user-event": "^14.5.2",
+    "@tsconfig/strictest": "^2.0.3",
+    "@tsconfig/vite-react": "^2.0.1",
+    "@types/jest": "^29.5.12",
+    "@types/node": "^20.11.17",
+    "@types/react": "^18.2.55",
+    "@types/react-dom": "^18.2.19",
+    "antd": "^5.14.1",
     "gh-pages": "^5.0.0",
     "react": "^18.2.0",
-    "react-doc-ui": "^1.0.0",
+    "react-doc-ui": "^2.2.6",
     "react-dom": "^18.2.0",
-    "typescript": "^5.1.3"
+    "rive": "^2.0.30",
+    "typescript": "^5.3.3",
+    "whatwg-fetch": "^3.6.20"
   },
   "peerDependencies": {
     "@alifd/next": "^1.0.0",
     "antd": "^5.0.0",
-    "react": "^16.8.0 || ^17.0.0 || ^18.0.0"
+    "react": "^18.0.0 || ^17.0.0 || ^16.8.0"
+  },
+  "rive": {
+    "template": "react",
+    "doc": {
+      "basename": "/next-antd/"
+    }
   }
 }
