--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "react": "^18.2.0",
     "react-doc-ui": "^2.2.6",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.22.0",
     "rive": "^2.0.30",
     "typescript": "^5.3.3",
     "whatwg-fetch": "^3.6.20"
